force-app/main/default/objects/vlocity_ps__AttributeBinding__c/fields/vlocity_ps__AttributeCode__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__AttributeCode__c</fullName>
    <formula>vlocity_ps__AttributeId__r.vlocity_ps__Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vlocity Attribute Code</label>
    <type>Text</type>
</CustomField>