force-app/main/default/objects/vlocity_ps__AttributeBinding__c/fields/vlocity_ps__ObjectClassId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__ObjectClassId__c</fullName>
    <label>Object Class</label>
    <referenceTo>vlocity_ps__ObjectClass__c</referenceTo>
    <relationshipLabel>Vlocity Attribute Bindings</relationshipLabel>
    <relationshipName>VlocityAttributeBindings</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>